New in 0.12:
============

* Improved startup performance by reducing the processing of an already imported
  module that has changed accessibility.

New in 0.11:
============

Updated export rules
--------------------

* The export rules are:
  - 'private' means that the definition is not exported at all
  - 'export' means that the top level type is exported, but not the
    definition. In the case of 'data', this means the type constructor is
    exported but not the data constructors.
  - 'public export' means that the entire definition is exported.
* By default, names are 'private'. This can be altered with an %access
  directive as before.
* Exported types can only refer to other exported names
* Publicly exported definitions can only refer to publicly exported names

Improved C FFI
--------------

* Idris functions can now be passed as callbacks to C functions or wrapped
in a C function pointer.
* C function pointers can be called.
* Idris can access pointers to C globals.

Effects
-------

* Effects can now be given in any order in effect lists (there is no need
for the ordering to be preserved in sub lists of effects)

Elaborator reflection updates
-----------------------------

* Datatypes can now be defined from elaborator reflection:
  - declareDatatype adds the type constructor declaration to the context
  - defineDatatype adds the constructors to the datatype
  - To declare an inductive-recursive family, declare the types of the
    function and the type constructor before defining the pattern-match
    cases and constructors.

Minor language changes
----------------------

* The '[static]' annotation is changed to '%static' to be consistent with the
  other annotations.
* Added '%auto_implicits' directive. The default is '%auto_implicits on'.
  Placing '%auto_implicits off' in a source file means that after that
  point, any implicit arguments must be bound, e.g.:
    append : {n,m,a:_} -> Vect n a -> Vect m a -> Vect (n + m) a
