@@ -1,3 +1,5 @@
 #!/usr/bin/env bash
 ${IDRIS:-idris} $@ --build test.ipkg
 rm -f  *.ibc
+${IDRIS:-idris} $@ --build test.ipkg --quiet
+${IDRIS:-idris} $@ --build test.ipkg --logging-categories "elab" --log 1
